--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,34 @@ img {
     width: 300px;
     height: 300px;
 }
+
+h1 {
+    color:rgb(104, 104, 156) ;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+}
+
+body { 
+    background-color: rgb(252, 246, 216);
+}
+
+img {
+    border: 5px solid rgb(104, 104, 156);
+    border-radius: 15px;
+    margin-left: 80px;
+    margin-top: 60px;
+}
+
+li {
+    color:rgb(104, 104, 156) ;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+ul {
+    margin-top: 60px;
+    color:rgb(56, 56, 92) ;
+    margin-left: 55px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: large;
+}
+
